--- a/index.html
+++ b/index.html
@@ -3,14 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PSD to HTML</title>
+    <title>Set A Title</title>
     <link rel="stylesheet" href="css/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/jquery-ui.min.css" />
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
-    <script src="js/jquery-3.5.1.min.js"></script>
-    <script src="js/jquery-ui.min.js"></script>
+    <!-- <script src="js/jquery-3.5.1.min.js"></script> -->
     <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
