--- a/_with-bs/index.html
+++ b/_with-bs/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Set A Title</title>
+    <link rel="icon" type="image/png" href="" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
-    <!-- <script src="js/jquery-3.5.1.min.js"></script> -->
+    <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
