--- a/_with-bs/index.html
+++ b/_with-bs/index.html
@@ -11,5 +11,6 @@
   <body>
     <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
